Fix cart menu spacing

--- a/styles.css
+++ b/styles.css
@@ -611,10 +611,6 @@ video {
   margin-top: 1.75rem;
 }
 
-.block {
-  display: block;
-}
-
 .flex {
   display: flex;
 }
@@ -635,10 +631,6 @@ video {
   height: 4rem;
 }
 
-.h-48 {
-  height: 12rem;
-}
-
 .h-5 {
   height: 1.25rem;
 }
@@ -651,12 +643,12 @@ video {
   height: 300px;
 }
 
-.h-12 {
-  height: 3rem;
-}
-
 .h-full {
   height: 100%;
+}
+
+.min-h-48 {
+  min-height: 12rem;
 }
 
 .min-h-screen {
@@ -751,6 +743,10 @@ video {
   gap: 2.5rem;
 }
 
+.gap-2 {
+  gap: 0.5rem;
+}
+
 .gap-3 {
   gap: 0.75rem;
 }
@@ -765,14 +761,6 @@ video {
 
 .gap-7 {
   gap: 1.75rem;
-}
-
-.gap-2 {
-  gap: 0.5rem;
-}
-
-.gap-1 {
-  gap: 0.25rem;
 }
 
 .self-end {
@@ -870,14 +858,14 @@ video {
   padding-right: 1.5rem;
 }
 
-.py-3 {
-  padding-top: 0.75rem;
-  padding-bottom: 0.75rem;
-}
-
 .py-1 {
   padding-top: 0.25rem;
   padding-bottom: 0.25rem;
+}
+
+.py-3 {
+  padding-top: 0.75rem;
+  padding-bottom: 0.75rem;
 }
 
 .pb-1 {
@@ -1040,8 +1028,8 @@ video {
     align-items: flex-start;
   }
 
-  .md\:gap-11 {
-    gap: 2.75rem;
+  .md\:gap-10 {
+    gap: 2.5rem;
   }
 
   .md\:gap-2 {
@@ -1054,10 +1042,6 @@ video {
 
   .md\:gap-8 {
     gap: 2rem;
-  }
-
-  .md\:gap-10 {
-    gap: 2.5rem;
   }
 
   .md\:rounded-2xl {
